--- a/feign-serice/pom.xml
+++ b/feign-serice/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>feign-serice</artifactId>
     <version>1.0</version>
     <name>feign-serice</name>
+    <packaging>jar</packaging>
     <description>this-feign-serice</description>
 
     <properties>
@@ -35,6 +36,17 @@
         </dependency>
     </dependencies>
 
+    <repositories>
+        <!-- maven中央仓库的版本甚至比阿里仓库还低 如下添加spring官方仓库 -->
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
     <build>
         <plugins>
             <plugin>
