--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,11 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.M3</spring-cloud.version>
-        <netflix-eureka.version>2.1.3.RELEASE</netflix-eureka.version>
+        <eureka.version>2.1.3.RELEASE</eureka.version>
         <ribbon.version>1.4.7.RELEASE</ribbon.version>
         <hystrix.version>1.4.7.RELEASE</hystrix.version>
+        <springloaded.version>1.2.8.RELEASE</springloaded.version>
+        <dockerfile.version>1.4.10</dockerfile.version>
     </properties>
 
     <dependencies>
@@ -42,6 +44,13 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <!-- 热部署插件 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
@@ -58,13 +67,13 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-                <version>${netflix-eureka.version}</version>
+                <version>${eureka.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-                <version>${netflix-eureka.version}</version>
+                <version>${eureka.version}</version>
             </dependency>
 
             <dependency>
