--- a/pom.xml
+++ b/pom.xml
@@ -20,15 +20,17 @@
         <module>eureka-server</module>
         <module>service</module>
         <module>ribbon-service</module>
-        <module>feign-serice</module>
+        <module>feign-service</module>
+        <module>zuul-service</module>
     </modules>
 
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.M3</spring-cloud.version>
-        <eureka.version>2.1.3.RELEASE</eureka.version>
+        <spring-boot.version>2.2.0.RELEASE</spring-boot.version>
         <ribbon.version>1.4.7.RELEASE</ribbon.version>
-        <hystrix.version>1.4.7.RELEASE</hystrix.version>
+        <netflix.version>2.1.3.RELEASE</netflix.version>
+        <hystrix-javanica.version>1.5.18</hystrix-javanica.version>
         <springloaded.version>1.2.8.RELEASE</springloaded.version>
         <dockerfile.version>1.4.10</dockerfile.version>
     </properties>
@@ -65,27 +67,45 @@
             </dependency>
 
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>${openfeign.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+                <version>${netflix.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-                <version>${eureka.version}</version>
+                <version>${netflix.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-                <version>${eureka.version}</version>
+                <version>${netflix.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+                <version>${netflix.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-ribbon</artifactId>
                 <version>${ribbon.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-hystrix</artifactId>
-                <!--<version>${hystrix.version}</version>-->
             </dependency>
         </dependencies>
     </dependencyManagement>
