--- a/config-client/src/main/resources/application.yml
+++ b/config-client/src/main/resources/application.yml
@@ -1,1 +1,16 @@
-
+spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: root
+    password: 123456
+  cloud:
+      bus:
+        enabled: true
+        trace:
+          enabled: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
