--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <spring-cloud.version>Hoxton.M3</spring-cloud.version>
         <spring-boot.version>2.2.0.RELEASE</spring-boot.version>
         <netflix.version>2.1.3.RELEASE</netflix.version>
+        <bus-amqp.version>2.1.3.RELEASE</bus-amqp.version>
         <config.version>2.1.4.RELEASE</config.version>
         <springloaded.version>1.2.8.RELEASE</springloaded.version>
         <dockerfile.version>1.4.10</dockerfile.version>
@@ -124,6 +125,20 @@
                 <artifactId>spring-cloud-config-server</artifactId>
                 <version>${config.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+                <version>${bus-amqp.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
+            <!-- https://dl.bintray.com/openzipkin/maven/io/zipkin/java/zipkin-server/2.12.9/ zipkin-server-2.12.9-exec.jar -->
         </dependencies>
     </dependencyManagement>
 
