--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -1,11 +1,10 @@
 # bootstrap配置优先于application配置文件 配置不会被覆盖
 spring:
-  application:
-    name: config-client
   cloud:
     config:
       label: master
       profile: dev
-      uri: http://localhost:8888/
-server:
-  port: 8882
+      # uri: http://localhost:8888/
+      discovery:
+        enabled: true
+        serviceId: config-server
