--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>eureka-server</module>
         <module>service</module>
+        <module>zipkin-service</module>
         <module>ribbon-service</module>
         <module>feign-service</module>
         <module>zuul-service</module>
@@ -53,18 +54,25 @@
         </dependency>
 
         <!-- 热部署插件 -->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-devtools</artifactId>-->
-<!--            <version>${spring-boot.version}</version>-->
-<!--            <optional>true</optional>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-devtools</artifactId>-->
+        <!--            <version>${spring-boot.version}</version>-->
+        <!--            <optional>true</optional>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>compile</scope>
+        </dependency>
+
+        <!-- 使用log4j2 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+            <version>${spring-boot.version}</version>
         </dependency>
     </dependencies>
 
@@ -82,6 +90,18 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring-boot.version}</version>
+            </dependency>
+
+            <!-- 排除默认日志 exclusion排除其中所有依赖 等于没有依赖 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-logging</artifactId>
+                <exclusions>
+                    <exclusion>
+                        <groupId>*</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
@@ -137,8 +157,6 @@
                 <artifactId>spring-boot-starter-actuator</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
-
-            <!-- https://dl.bintray.com/openzipkin/maven/io/zipkin/java/zipkin-server/2.12.9/ zipkin-server-2.12.9-exec.jar -->
         </dependencies>
     </dependencyManagement>
 
