--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 spring:
   application:
     name: service
+  zipkin:
+    base-url: http://localhost:9494
 eureka:
   client:
     service-url:
