--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modules>
         <module>eureka-server</module>
         <module>service</module>
-        <module>zipkin-service</module>
+        <module>service-two</module>
         <module>ribbon-service</module>
         <module>feign-service</module>
         <module>zuul-service</module>
@@ -33,6 +33,7 @@
         <spring-boot.version>2.2.0.RELEASE</spring-boot.version>
         <zipkin-starter.version>2.1.5.RELEASE</zipkin-starter.version>
         <netflix.version>2.1.3.RELEASE</netflix.version>
+        <openfeign-starter.version>2.1.3.RELEASE</openfeign-starter.version>
         <bus-amqp.version>2.1.3.RELEASE</bus-amqp.version>
         <config.version>2.1.4.RELEASE</config.version>
         <springloaded.version>1.2.8.RELEASE</springloaded.version>
@@ -108,12 +109,24 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
-                <version>${netflix.version}</version>
+                <version>${openfeign-starter.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+                <version>${netflix.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-turbine</artifactId>
+                <version>${netflix.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
                 <version>${netflix.version}</version>
             </dependency>
 
@@ -144,6 +157,12 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-config-server</artifactId>
+                <version>${config.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-config</artifactId>
                 <version>${config.version}</version>
             </dependency>
 
