--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8988
+  port: 8762
 spring:
   application:
     name: service
@@ -9,3 +9,11 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+      cors:
+        allowed-origins: '*'
+        allowed-methods: '*'
