--- a/config/config-server/pom.xml
+++ b/config/config-server/pom.xml
@@ -4,15 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>cloud</artifactId>
+        <artifactId>config</artifactId>
         <version>1.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>config-client</artifactId>
+    <artifactId>config-server</artifactId>
     <version>1.0</version>
-    <name>config-client</name>
-    <description>this-config-client</description>
+    <name>config-server</name>
+    <description>this-config-server</description>
 
     <dependencies>
         <dependency>
@@ -22,7 +22,7 @@
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
 
         <dependency>
@@ -34,11 +34,6 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bus-amqp</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
@@ -49,5 +44,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
