--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <description>this-cloud</description>
 
     <modules>
-        <module>eureka-server</module>
+        <module>eureka</module>
         <module>turbine-service</module>
         <module>service</module>
         <module>service-two</module>
