refactor(gateway): 重构gateway

--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
         <module>turbine-service</module>
         <module>ribbon</module>
         <module>feign</module>
-        <module>zuul-service</module>
-        <module>gateway-service</module>
+        <module>zuul</module>
+        <module>gateway</module>
         <module>config</module>
     </modules>
 
