--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <modules>
         <module>eureka</module>
-        <module>turbine-service</module>
+        <module>nacos</module>
         <module>ribbon</module>
         <module>feign</module>
         <module>zuul</module>
@@ -55,12 +55,6 @@
 
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-netflix-turbine</artifactId>
-                <version>${netflix.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
                 <version>${netflix.version}</version>
             </dependency>
@@ -75,6 +69,18 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
                 <version>${netflix.version}</version>
+            </dependency>
+
+            <!-- nacos -->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+                <version>${nacos.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+                <version>${nacos.version}</version>
             </dependency>
 
             <dependency>
@@ -131,6 +137,7 @@
         <spring-boot.version>2.3.2.RELEASE</spring-boot.version>
         <spring-cloud.version>Hoxton.SR6</spring-cloud.version>
         <netflix.version>2.2.3.RELEASE</netflix.version>
+        <nacos.version>2.2.1.RELEASE</nacos.version>
         <openfeign.version>2.2.3.RELEASE</openfeign.version>
         <gateway.version>2.2.3.RELEASE</gateway.version>
         <bus-amqp.version>2.2.3.RELEASE</bus-amqp.version>
