--- a/eureka/eureka-server/Dockerfile
+++ b/eureka/eureka-server/Dockerfile
@@ -1,9 +1,10 @@
 FROM openjdk:8-jre-alpine
 # 作者信息
-LABEL maintainer="lilei <tothis@qq.com>"
+LABEL author=lilei
+LABEL email=this.lilei@gmail.com
 # 接收pom中传递的参数
 ARG JAR_FILE
-# 复制打包后的jar到docker容器目录下
+# 复制打包后的jar到Docker容器目录下
 ADD ${JAR_FILE} /app.jar
 # 启动容器时执行
 ENTRYPOINT ["java", "-jar", "/app.jar"]
