--- a/config/pom.xml
+++ b/config/pom.xml
@@ -4,19 +4,18 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>cloud</artifactId>
+        <artifactId>spring-cloud-record</artifactId>
         <version>1.0</version>
     </parent>
-    <groupId>com.example</groupId>
     <artifactId>config</artifactId>
     <version>1.0</version>
     <name>config</name>
     <description>this-config</description>
 
+    <packaging>pom</packaging>
+
     <modules>
         <module>config-server</module>
         <module>config-client</module>
     </modules>
-
-    <packaging>pom</packaging>
 </project>
