--- a/feign/feign-consumer/pom.xml
+++ b/feign/feign-consumer/pom.xml
@@ -4,10 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>cloud</artifactId>
+        <artifactId>spring-cloud-record</artifactId>
         <version>1.0</version>
     </parent>
-    <groupId>com.example</groupId>
     <artifactId>feign-consumer</artifactId>
     <version>1.0</version>
     <name>feign-consumer</name>
