--- a/feign/pom.xml
+++ b/feign/pom.xml
@@ -4,19 +4,18 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>cloud</artifactId>
+        <artifactId>spring-cloud-record</artifactId>
         <version>1.0</version>
     </parent>
-    <groupId>com.example</groupId>
     <artifactId>feign</artifactId>
     <version>1.0</version>
     <name>feign</name>
     <description>this-feign</description>
 
+    <packaging>pom</packaging>
+
     <modules>
         <module>feign-consumer</module>
         <module>feign-provider</module>
     </modules>
-
-    <packaging>pom</packaging>
 </project>
