--- a/nacos/nacos-client/src/main/resources/bootstrap.yml
+++ b/nacos/nacos-client/src/main/resources/bootstrap.yml
@@ -2,8 +2,14 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: 192.168.159.128:8848
+        server-addr: 192.168.1.128:8848
         # 配置文件后缀
         file-extension: yml
+        # Nacos开启鉴权后需配置用户及其密码
+        username: nacos
+        password: nacos
       discovery:
-        server-addr: 192.168.159.128:8848
+        server-addr: 192.168.1.128:8848
+        # Nacos开启鉴权后需配置用户及其密码
+        username: nacos
+        password: nacos
