--- a/nacos/pom.xml
+++ b/nacos/pom.xml
@@ -4,18 +4,17 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>cloud</artifactId>
+        <artifactId>spring-cloud-record</artifactId>
         <version>1.0</version>
     </parent>
-    <groupId>com.example</groupId>
     <artifactId>nacos</artifactId>
     <version>1.0</version>
     <name>nacos</name>
     <description>this-nacos</description>
 
+    <packaging>pom</packaging>
+
     <modules>
         <module>nacos-client</module>
     </modules>
-
-    <packaging>pom</packaging>
 </project>
