--- a/ribbon/ribbon-consumer/pom.xml
+++ b/ribbon/ribbon-consumer/pom.xml
@@ -4,10 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>cloud</artifactId>
+        <artifactId>spring-cloud-record</artifactId>
         <version>1.0</version>
     </parent>
-    <groupId>com.example</groupId>
     <artifactId>ribbon-consumer</artifactId>
     <version>1.0</version>
     <name>ribbon-consumer</name>
