--- a/config/pom.xml
+++ b/config/pom.xml
@@ -15,7 +15,19 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>config-server</module>
         <module>config-client</module>
+        <module>config-server</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
+    </dependencies>
 </project>
